<resources>
    <string name="app_name">Handl User New</string>
    <string name="hello_blank_fragment">Hello blank</string>
    <string name="title_activity_main">Area</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="remember_me">Remember me </string>
    <string name="forgot_password">Remember me </string>
    <string name="hello_first_fragment">Hello first </string>
    <string name="hello_second_fragment">Hello second </string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="postal_code">Country</string>
    <string name="confirm_location">Confirm loccation</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error">Restfull error</string>
    <string name="api_is_in_maintenance">Api is in maintenance</string>
    <string name="api_is_expired">Api is in Expired</string>
    <string name="retry_cap">RETRY</string>
    <string name="location_permission_not_specified">Location Permission not specified</string>
    <string name="gps_not_enabled">GPS not enabled</string>
    <string name="not_connected_to_internet">Not connected to Internet</string>
    <string name="poor_internet_connection">Poor internet connection</string>
    <string name="view_profile">View Profile</string>
    <string name="login">Login</string>
    <string name="please_wait">Please wait</string>
    <string name="after_permission">after permission</string>
    <string name="forgot_your_password">Forgot Password</string>
    <string name="enter_your_email_below_to_receive_your_reset_password_instructions">Enter your registered email to \nreset password.</string>
    <string name="email_id">Email Id</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="signup">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="log_inn">Log In</string>
    <string name="otp_verify">OTP Verification</string>
    <string name="otp_">OTP</string>
    <string name="otp_text">Enter your four digit OTP below to verify \nyour email address.</string>
    <string name="submit">Submit</string>
    <string name="or_connect_with">or connect with</string>
    <string name="english">English</string>
    <string name="ok">OK</string>
    <string name="share_location">Confirm Location</string>
    <string name="city">City</string>
    <string name="continu">Continue</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_terms">I agree to <font fgcolor="#4fb6c5">Terms &amp; Conditions</font></string>
    <string name="register">Register</string>
    <string name="please_enter_you_mobile_phone_to_complete_registration">Please enter you mobile phone to complete registration</string>
    <string name="by_continuing_you_agree_to_our">"By continuing you agree to our "</string>
    <string name="t_cs"><![CDATA[T&Cs]]></string>
    <string name="please_also_check_our">"Please also check our "</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="see_here">see here</string>
    <string name="we_use_data_to_offer_you_a_person">We use data to offer you a personalized experience and to better understand and improve our services.</string>
    <string name="more_infor">"For more information "</string>
    <string name="register_you_house_to_save_time_n_e_g_grandma_s_home_my_home">Register you house to save time\n(E.G GRANDMA\'S HOME, MY HOME)</string>
    <string name="add_nickname">Type a nickname for this address</string>
    <string name="address">Address</string>
    <string name="add_to_my_homes">+ Add to my homes</string>
    <string name="update_homes">+ Update my homes</string>
    <string name="conitnue_with_email">Sign Up with email</string>
    <string name="or">OR</string>
    <string name="add_payment_method">Add a Payment Method</string>
    <string name="card_number">Card Number</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="cvv">CVV</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="my_homes">My Addresses</string>
    <string name="no_data_found">No data found</string>
    <string name="no_about_me">No Bio added</string>
    <string name="write_message">Write message</string>
    <string name="change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="add_new_home">Add a new address</string>
    <string name="add_new_home_address">+ add a new address</string>
    <string name="warning_n_ndue_to_the_number_of_rooms_selected_there_is_a_possibility_that_not_all_rooms_will_be_done_within_a_day_so_you_will_need_to_re_book_with_the_same_or_another_provider_for_more_than_one_appointments">WARNING!\n\nDue to the number of rooms selected there is a possibility that not all rooms will be done within a day so you will need to re-book with the same or another provider for more than one appointments.</string>
    <string name="how_many_rooms_do_you_need_painting">How many rooms do you need painting?</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="remember_information_for_next_time">Remember information for next time</string>
    <string name="pruning">Pruning</string>
    <string name="what_garden_services_do_you_need_nnote_square_feet_doesn_t_need_to_be_exact_but_your_best_estimate_will_allow_a_better_calculation_of_time_needed_for_the_professional">What garden services do you need?\nNote: Square feet doesn\'t need to be exact but your best estimate will allow a better calculation of time needed for the professional.</string>
    <string name="how_many">How many?</string>
    <string name="trees">Trees</string>
    <string name="bushes">Bushes</string>
    <string name="other">Other</string>
    <string name="deweeding">Deweeding</string>
    <string name="squarefeet">Squarefeet</string>
    <string name="spraying">Tree Spraying</string>
    <string name="how_many_furniture_do_you_need_to_assemble">How many furniture do you need to assemble?</string>
    <string name="select_that_apply_to_you">Select that apply to you</string>
    <string name="do_you_have_any_other_requests_for_your_provider">Do you have any other requests for your provider?</string>
    <string name="type_here">Type here…</string>
    <string name="what_age">What age?</string>
    <string name="what_grade">What grade?</string>
    <string name="for_how_many_kids_and_what_level_will_the_tutor_be_needed_for">For how many kids and what level will the tutor be needed for?</string>
    <string name="the_purpose_of_the_primary_school_tutor_is_to_help_kids_finish_their_homework_an_take_care_of_the_kid_if_homework_finishes_early_for_the_duration_of_the_appointment">The purpose of the primary school tutor is to help kids finish their homework an take care of the kid if homework finishes early for the duration of the appointment</string>
    <string name="pet_sitters_will_take_care_of_your_pet_or_take_it_for_walking_for_however_long_ou_specify_this_for">Pet sitters will take care of your pet or take it for walking for however long ou specify this for.</string>
    <string name="how_many_dogs_do_you_need_to_be_taken_for_walking">How many dogs do you need to be taken for walking?</string>
    <string name="what_services_will_you_need">What services will you need?</string>
    <string name="for_how_many_people_do_you_need_the_nutritionist_for">For how many people do you need the nutritionist for?</string>
    <string name="for_how_many_people_do_you_need_the_artist_for">For how many people do you need the make up artist for?</string>
    <string name="how_many_air_conditions_do_you_have">How many airconditions do you have?</string>
    <string name="select_the_service_you_need">Select the service you need</string>
    <string name="how_many_cars_need_internal_and_or_external_washing">How many cars need internal and/or external washing?</string>
    <string name="internal_car_wash">Internal Car wash</string>
    <string name="no_of_cars">No of cars</string>
    <string name="external_car_wash">External Car wash</string>
    <string name="how_many_room_do_you_need_professionally_disinfected">How many room do you need professionally disinfected?</string>
    <string name="domestic_disinfection">Domestic Disinfection</string>
    <string name="no_of_rooms">No of rooms</string>
    <string name="office_space_disinfection">Office Space Disinfection</string>
    <string name="click_on_the_specific_services_you_need_to_allow_a_more_accurate_time_estimate">Click on the specific services you need to allow a more accurate time estimate</string>
    <string name="set_month_amp_date"><![CDATA[Set Month & Date]]></string>
    <string name="set_time">Set Time</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="search_for_you_address_or_move_the_pin_on_the_map_to_find_the_location_you_want_to_register">Search for you address or move the pin on the map to find the location you want to register</string>
    <string name="search_for_address">Search for your address</string>
    <string name="choose_one">Choose one</string>
    <string name="add">Add</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="contact">Contact</string>
    <string name="send_us_an_email_if_you_have_any_questions_or_need_to_contact_us">Send us an email if you have any questions or need to contact us</string>
    <string name="topic">Topic</string>
    <string name="order_summary">Order Summary</string>
    <string name="duration">Duration</string>
    <string name="cost_hr">Cost per hour</string>
    <string name="final_cost">Final Cost</string>
    <string name="cancel">Cancel</string>
    <string name="start_task">Start Task</string>
    <string name="end_task">End Task</string>
    <string name="chat">Chat</string>
    <string name="call_provider">Call Provider</string>
    <string name="we_apologize_nwe_don_t_operate_in_your_narea_yet">We apologize!\nWe don\'t operate in your\narea yet</string>
    <string name="are_you_sure_you_want_to_terminate_this_service">Are you sure you want to terminate this service?</string>
    <string name="are_you_sure_you_want_to_cancel">Are you sure you want to cancel?</string>
    <string name="yes">Yes</string>
    <string name="no_cancel">No, Cancel</string>
    <string name="yes_cancel">Yes, Cancel</string>
    <string name="no">No</string>
    <string name="about">About</string>
    <string name="about_the_provider">About the provider</string>
    <string name="experience">Experience</string>
    <string name="reviews">Reviews</string>
    <string name="click_to_see_more">Click to see more</string>
    <string name="request_service">Request Service</string>
    <string name="date">Date</string>
    <string name="estimated_duration">Estimated Duration</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
</resources>